--- a/employee-dashboard/package.json
+++ b/employee-dashboard/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "redux": "^4.0.5",
+    "web-vitals": "^2.1.4",
+    "webpack-dev-server": "^4.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
