--- a/employee-dashboard/package.json
+++ b/employee-dashboard/package.json
@@ -12,8 +12,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.0.5",
+    "update": "^0.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
